# my-http-server

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: a.out  http_parser.cpp  http_parser.h  http_response.cpp  http_response.h  main.cpp  server.cpp  thread_pool.cpp  thread_pool.h
static/: index.html
